# freya

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig  build.zig.zon  go.mod  main.go  server.go
.github/workflows/: main.yml
c/: bindings.c  bindings.h
c/nanoarrow/: nanoarrow.h
src/: main.zig
